manifests/passenger-deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   creationTimestamp: null
#   labels:
#     app: first-deployment
#   name: first-deployment
# spec:
#   replicas: 3
#   selector:
#     matchLabels:
#       app: first-deployment
#   strategy: {}
#   template:
#     metadata:
#       creationTimestamp: null
#       labels:
#         app: first-deployment
#     spec:
#       containers:
#       - image: gcr.io/prefab-list-286120/simple-web-app:v1
#         name: passenger-nginx
#         resources: {}
# status: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloweb
  labels:
    app: hello
spec:
  # replicas: 3
  selector:
    matchLabels:
      app: hello
      tier: web
  template:
    metadata:
      labels:
        app: hello
        tier: web
    spec:
      containers:
      - name: hello-app
        image: gcr.io/macro-tributary-286518/simple-web-app:v1
        ports:
        - containerPort: 8080
